--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -17,8 +17,8 @@
           <span class="brand-text">Shortlet Connect</span>
         </h3>
         <p class="footer-description" appTypingEffect [config]="{typingSpeed: 3, autoStart: true}">
-          Your trusted platform for finding and booking premium shortlet apartments.
-          Experience seamless bookings with verified properties and exceptional service.
+          Book our luxury two-bedroom apartment in Victoria Island, Lagos.
+          Experience comfort and convenience in the heart of the city.
         </p>
         <div class="social-links">
           <a href="#" aria-label="Facebook" class="social-link">
@@ -52,7 +52,7 @@
           <li>
             <a routerLink="/home">
               <i class="fas fa-chevron-right"></i>
-              <span>Browse Apartments</span>
+              <span>View Apartment</span>
             </a>
           </li>
           <li>
@@ -64,7 +64,7 @@
           <li>
             <a href="#about">
               <i class="fas fa-chevron-right"></i>
-              <span>About Us</span>
+              <span>About</span>
             </a>
           </li>
         </ul>
@@ -78,21 +78,21 @@
         </h4>
         <ul class="footer-links contact-links">
           <li>
-            <a href="mailto:info@shortletconnect.com">
+            <a href="mailto:admin@shortletconnect.com">
               <i class="fas fa-envelope"></i>
-              <span>info&#64;shortletconnect.com</span>
+              <span>admin&#64;shortletconnect.com</span>
             </a>
           </li>
           <li>
-            <a href="tel:+1234567890">
+            <a href="tel:+2348091234567">
               <i class="fas fa-phone"></i>
-              <span>+1 (234) 567-890</span>
+              <span>+234 809 123 4567</span>
             </a>
           </li>
           <li>
             <a href="#location">
               <i class="fas fa-location-dot"></i>
-              <span>123 Main Street, City</span>
+              <span>Victoria Island, Lagos</span>
             </a>
           </li>
         </ul>
@@ -105,7 +105,7 @@
           Stay Updated
         </h4>
         <p class="newsletter-description" appTypingEffect [config]="{typingSpeed: 2, autoStart: true}">
-          Subscribe to get the latest deals and apartment listings.
+          Get notified about availability and special offers.
         </p>
         <form class="newsletter-form" (submit)="onNewsletterSubmit($event)">
           <div class="input-group">
